@@ -1,4 +1,4 @@
-package org.k8loud.executor.action.openstack;
+package org.k8loud.executor.action.openstack.nova;
 
 import data.ExecutionExitCode;
 import data.ExecutionRS;
@@ -8,13 +8,13 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
+import org.k8loud.executor.action.openstack.VerticalScalingDownAction;
 import org.k8loud.executor.exception.ActionException;
 import org.k8loud.executor.exception.OpenstackException;
-import org.k8loud.executor.openstack.OpenstackServiceImpl;
+import org.k8loud.executor.openstack.OpenstackService;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.stream.Stream;
 
@@ -25,28 +25,28 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-public class DetachVolumeActionTest {
+public class VerticalScalingDownActionTest {
     private static final String REGION = "regionTest";
     private static final String SERVER_ID = "123-server-id-123";
-    private static final String VOLUME_ID = "123-volume-id-123";
+    private static final String FLAVOR_ID = "123-flavor-id-123";
     private static final Params VALID_PARAMS = new Params(
-            Map.of("region", REGION, "serverId", SERVER_ID, "volumeId", VOLUME_ID));
+            Map.of("region", REGION, "serverId", SERVER_ID, "flavorId", FLAVOR_ID));
     @Mock
-    OpenstackServiceImpl openstackServiceImplMock;
+    OpenstackService openstackServiceMock;
 
     @Test
     void testVerticalScalingAction() throws ActionException, OpenstackException {
         // given
-        DetachVolumeAction detachVolumeAction = new DetachVolumeAction(VALID_PARAMS,
-                openstackServiceImplMock);
+        VerticalScalingDownAction verticalScalingAction = new VerticalScalingDownAction(VALID_PARAMS,
+                openstackServiceMock);
 
-        doNothing().when(openstackServiceImplMock).detachVolume(anyString(), anyString(), anyString());
+        doNothing().when(openstackServiceMock).resizeServerDown(anyString(), anyString(), anyString());
 
         // when
-        ExecutionRS response = detachVolumeAction.perform();
+        ExecutionRS response = verticalScalingAction.perform();
 
         // then
-        verify(openstackServiceImplMock).detachVolume(eq(REGION), eq(SERVER_ID), eq(VOLUME_ID));
+        verify(openstackServiceMock).resizeServerDown(eq(REGION), eq(SERVER_ID), eq(FLAVOR_ID));
         assertThat(response.getResult()).isEqualTo("Success");
         assertThat(response.getExitCode()).isSameAs(ExecutionExitCode.OK);
     }
@@ -56,26 +56,23 @@ public class DetachVolumeActionTest {
     void testVerticalScalingActionWrongParams(Params invalidParams, String missingParam) {
         // when
         Throwable throwable = catchThrowable(
-                () -> new DetachVolumeAction(invalidParams, openstackServiceImplMock));
+                () -> new VerticalScalingDownAction(invalidParams, openstackServiceMock));
 
         // then
         assertThat(throwable).isExactlyInstanceOf(ActionException.class)
                 .hasMessage("Param '%s' is declared as " + "required and was not found", missingParam);
         assertThat(((ActionException) throwable).getExceptionCode()).isEqualTo(UNPACKING_PARAMS_FAILURE);
 
-        verifyNoInteractions(openstackServiceImplMock);
+        verifyNoInteractions(openstackServiceMock);
     }
 
     private static Stream<Arguments> testVerticalScalingActionWrongParams() {
         return Stream.of(
                 Arguments.of(
-                        new Params(Map.of("serverId", SERVER_ID, "volumeId", VOLUME_ID)), "region"),
+                        new Params(Map.of("serverId", SERVER_ID, "flavorId", FLAVOR_ID)), "region"),
                 Arguments.of(
-                        new Params(Map.of("region", REGION, "volumeId", VOLUME_ID)), "serverId"),
+                        new Params(Map.of("region", REGION, "flavorId", FLAVOR_ID)), "serverId"),
                 Arguments.of(
-                        new Params(Map.of("region", REGION, "serverId", SERVER_ID)), "volumeId"),
-                Arguments.of(
-                        new Params(Collections.emptyMap()), "region"
-                ));
+                        new Params(Map.of("region", REGION, "serverId", SERVER_ID)), "flavorId"));
     }
 }
